# tech_youtubers

./: .env.example  .gitignore  .htmlvalidateignore  AGENTS.md  CLAUDE.md  Justfile  Makefile  README.md  generate_pages.py  generate_review_stubs.py  mastodon-follow-poc.html  package-lock.json  package.json  pelicanconf.py  publishconf.py  pyproject.toml
.github/workflows/: deploy-pages.yml
content/articles/: corey-schafer.md  fireship.md  hussein-nasser.md  takuya-matsuyama-devaslife.md  the-primeagen.md  theo-t3-gg.md  tj-devries.md
content/pages/: about.md  art-making.md  bots.md  bulk-follow.md  culture-entertainment.md  databases.md  devops.md  gaming.md  general.md  go.md  home.md  javascript.md  lifestyle-hobbies.md  mobile.md  music.md  news-society.md  other.md  python.md  rust.md  science-education.md  technology.md  youtubers.md
data/: category_overrides.json  starter.md  youtubers.json
pipeline/: categorize.py  discover_mastodon.py  dossier.py  gemma_review.py  language.py  mastodon.py  mastodon_discovery.py  publish_candidates.py  wikidata.py  youtube_feed.py  youtube_stats.py  youtuber_store.py
scripts/: build_dossiers.py  check_links.py  check_mastodon_links.py  check_pelican_artifacts.py  copy_static.py  detect_language.py  fetch_youtube_stats.py  review_dossiers.py
spec/: dossier_pipeline.md  road_map.md  rubric.md
static/mastodon-follow/: creator-profile.js  (+3 more)
tests/: test_activity_filter.py  test_creator_pages.py  test_gemma_review.py  test_language.py  test_linkify.py  test_mastodon_discovery.py  test_wikidata.py  test_youtube_feed.py
(+787 files in other folders)
